# Surveyor

./: DOCKERFILE  Dockerfile  README.md  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
api/: index.php
createsurvey/: apps.py  models.py  views.py
css/: styles.css
js/: scripts.js
src/: index.ts  swagger.ts
src/config/: oauth2.ts  passport.ts
src/controllers/: attemptController.ts  clientController.ts  questionControllers.ts  surveyController.ts
src/models/: attemptSchema.ts  models.ts  questionSchema.ts  responseSchema.ts  schema.ts  surveySchema.ts
src/models/auth/: clientSchema.ts  tokensSchema.ts  userSchema.ts
src/routes/: attemptRoutes.ts  authRoutes.ts  clientRoutes.ts  questionRoutes.ts  surveyRoutes.ts
src/services/: attemptService.ts  surveyService.ts
src/services/auth/: clientService.ts  userService.ts
survey/: test.json
surveyor/: asgi.py  settings.py  urls.py  wsgi.py
